# models/UserBasic.go
@@ -29,6 +29,16 @@ func (table *UserBasic) TableName() string {
 	return "user_basic"
 }
 
+func FindUserByNameAndPwd(name string, password string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ? and password=?", name, password).First(&user)
+	//token加密
+	str := fmt.Sprintf("%d", time.Now().Unix())
+	temp := utils.MD5Encode(str)
+	utils.DB.Model(&user).Where("id = ?", user.ID).Update("identidy", temp)
+	return user
+}
+
 func FindUserByName(name string) UserBasic {
 	user := UserBasic{}
 	utils.DB.Where("name = ?", name).First(&user)
